parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID programA1 SEMICOLON programVars programFunc main
Rule 2     programA1 -> <empty>
Rule 3     main -> mainA1 MAIN LEFTPAR RIGHTPAR LEFTBRACE statement RIGHTBRACE
Rule 4     mainA1 -> <empty>
Rule 5     programVars -> declaration
Rule 6     programVars -> <empty>
Rule 7     programFunc -> function programFunc
Rule 8     programFunc -> <empty>
Rule 9     assignment -> ID EQUAL Expression2 SEMICOLON
Rule 10    declaration -> VAR declarationPDT
Rule 11    declarationPDT -> PDT vars SEMICOLON declarationPDT
Rule 12    declarationPDT -> <empty>
Rule 13    PDT -> INT
Rule 14    PDT -> FLOAT
Rule 15    PDT -> CHAR
Rule 16    return -> RETURN LEFTPAR Expression2 RIGHTPAR SEMICOLON
Rule 17    if -> IF LEFTPAR Expression2 RIGHTPAR createJQif THEN LEFTBRACE statement RIGHTBRACE ifElse updateJQ
Rule 18    createJQif -> <empty>
Rule 19    updateJQ -> <empty>
Rule 20    ifElse -> ELSE createJQelse LEFTBRACE statement RIGHTBRACE
Rule 21    ifElse -> <empty>
Rule 22    createJQelse -> <empty>
Rule 23    for -> FOR forDeclaration TO Expression2 LEFTBRACE statement RIGHTBRACE
Rule 24    forDeclaration -> ID EQUAL CST_INT
Rule 25    comment -> COMMENT_TEXT
Rule 26    while -> WHILE LEFTPAR Expression2 RIGHTPAR LEFTBRACE statement RIGHTBRACE
Rule 27    vars -> ID varsA1 varsArray varsComa
Rule 28    varsA1 -> <empty>
Rule 29    varsComa -> COMA vars
Rule 30    varsComa -> <empty>
Rule 31    varsMatrix -> LEFTBRACK CST_INT RIGHTBRACK
Rule 32    varsMatrix -> <empty>
Rule 33    varsArray -> LEFTBRACK CST_INT RIGHTBRACK varsMatrix
Rule 34    varsArray -> <empty>
Rule 35    function -> functionType ID functionA1 LEFTPAR param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
Rule 36    function -> functionType ID functionA1 LEFTPAR RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
Rule 37    param -> PDT ID paramA1 functionParam
Rule 38    functionParam -> COMA param
Rule 39    functionParam -> <empty>
Rule 40    paramA1 -> <empty>
Rule 41    functionType -> FUNCTION PDT
Rule 42    functionType -> FUNCTION VOID functionTypeA1
Rule 43    cst_PDT -> CST_INT cstprimA1
Rule 44    cst_PDT -> CST_FLOAT cstprimA2
Rule 45    cst_PDT -> CST_CHAR cstprimA3
Rule 46    cstprimA1 -> <empty>
Rule 47    cstprimA2 -> <empty>
Rule 48    cstprimA3 -> <empty>
Rule 49    functionA1 -> <empty>
Rule 50    Expression2 -> Expression3 Exp2A1 Expression22 Expression2Nested
Rule 51    Expression2 -> Expression3 opMatrix
Rule 52    Expression2 -> Expression3 Exp2A1
Rule 53    Expression2Nested -> Expression3 Exp2A1 Expression22 Expression2Nested
Rule 54    Expression2Nested -> Expression3 Exp2A1
Rule 55    Exp2A1 -> <empty>
Rule 56    Expression22 -> AND addOperator
Rule 57    Expression22 -> OR addOperator
Rule 58    Expression3 -> exp Exp3A1 Expression33 exp Exp3A1
Rule 59    Expression3 -> exp Exp3A1
Rule 60    Expression33 -> GT addOperator
Rule 61    Expression33 -> LT addOperator
Rule 62    Expression33 -> NOTEQUAL addOperator
Rule 63    Expression33 -> ISEQUAL addOperator
Rule 64    Exp3A1 -> <empty>
Rule 65    opMatrix -> EXCLAMATION addOperator
Rule 66    opMatrix -> QUESTION addOperator
Rule 67    opMatrix -> DOLLARSIGN addOperator
Rule 68    exp -> term termA1 expFunction
Rule 69    exp -> term termA1
Rule 70    termA1 -> <empty>
Rule 71    expFunction -> PLUS addOperator exp
Rule 72    expFunction -> MINUS addOperator exp
Rule 73    functionTypeA1 -> <empty>
Rule 74    term -> factor factorA1 termFunction
Rule 75    term -> factor factorA1
Rule 76    factorA1 -> <empty>
Rule 77    termFunction -> MULTIPLY addOperator term
Rule 78    termFunction -> DIVIDE addOperator term
Rule 79    addOperator -> <empty>
Rule 80    factor -> LEFTPAR Expression2 RIGHTPAR
Rule 81    factor -> cst_PDT addOperand
Rule 82    factor -> module
Rule 83    factor -> ID addOperand addTypeId
Rule 84    addOperand -> <empty>
Rule 85    addTypeId -> <empty>
Rule 86    read -> READ LEFTPAR id_list RIGHTPAR SEMICOLON
Rule 87    id_list -> ID addRead id_listFunction
Rule 88    id_listFunction -> COMA id_list
Rule 89    id_listFunction -> <empty>
Rule 90    addRead -> <empty>
Rule 91    print -> PRINT LEFTPAR printFunction RIGHTPAR SEMICOLON
Rule 92    printFunction -> print_param COMA printFunction2
Rule 93    printFunction -> print_param
Rule 94    printFunction2 -> printFunction
Rule 95    addPrint -> <empty>
Rule 96    print_param -> Expression2 addPrint
Rule 97    print_param -> CST_STRING addPrintString
Rule 98    addPrintString -> <empty>
Rule 99    module -> ID LEFTPAR moduleFunction RIGHTPAR SEMICOLON
Rule 100   statement -> return
Rule 101   statement -> if statement
Rule 102   statement -> comment statement
Rule 103   statement -> read statement
Rule 104   statement -> print statement
Rule 105   statement -> assignment statement
Rule 106   statement -> declaration statement
Rule 107   statement -> module statement
Rule 108   statement -> for statement
Rule 109   statement -> while statement
Rule 110   statement -> <empty>
Rule 111   moduleFunction -> Expression2 COMA moduleFunction
Rule 112   moduleFunction -> Expression2 RIGHTPAR
Rule 113   moduleFunction -> <empty>

Terminals, with rules where they appear

AND                  : 56
CHAR                 : 15
COMA                 : 29 38 88 92 111
COMMENT_TEXT         : 25
CST_CHAR             : 45
CST_FLOAT            : 44
CST_INT              : 24 31 33 43
CST_STRING           : 97
DIVIDE               : 78
DOLLARSIGN           : 67
ELSE                 : 20
EQUAL                : 9 24
EXCLAMATION          : 65
FLOAT                : 14
FOR                  : 23
FUNCTION             : 41 42
GT                   : 60
ID                   : 1 9 24 27 35 36 37 83 87 99
IF                   : 17
INT                  : 13
ISEQUAL              : 63
LEFTBRACE            : 3 17 20 23 26 35 36
LEFTBRACK            : 31 33
LEFTPAR              : 3 16 17 26 35 36 80 86 91 99
LT                   : 61
MAIN                 : 3
MINUS                : 72
MULTIPLY             : 77
NOTEQUAL             : 62
OR                   : 57
PLUS                 : 71
PRINT                : 91
PROGRAM              : 1
QUESTION             : 66
READ                 : 86
RETURN               : 16
RIGHTBRACE           : 3 17 20 23 26 35 36
RIGHTBRACK           : 31 33
RIGHTPAR             : 3 16 17 26 35 36 80 86 91 99 112
SEMICOLON            : 1 9 11 16 35 36 86 91 99
THEN                 : 17
TO                   : 23
VAR                  : 10
VOID                 : 42
WHILE                : 26
error                : 

Nonterminals, with rules where they appear

Exp2A1               : 50 52 53 54
Exp3A1               : 58 58 59
Expression2          : 9 16 17 23 26 80 96 111 112
Expression22         : 50 53
Expression2Nested    : 50 53
Expression3          : 50 51 52 53 54
Expression33         : 58
PDT                  : 11 37 41
addOperand           : 81 83
addOperator          : 56 57 60 61 62 63 65 66 67 71 72 77 78
addPrint             : 96
addPrintString       : 97
addRead              : 87
addTypeId            : 83
assignment           : 105
comment              : 102
createJQelse         : 20
createJQif           : 17
cst_PDT              : 81
cstprimA1            : 43
cstprimA2            : 44
cstprimA3            : 45
declaration          : 5 106
declarationPDT       : 10 11
exp                  : 58 58 59 71 72
expFunction          : 68
factor               : 74 75
factorA1             : 74 75
for                  : 108
forDeclaration       : 23
function             : 7
functionA1           : 35 36
functionParam        : 37
functionType         : 35 36
functionTypeA1       : 42
id_list              : 86 88
id_listFunction      : 87
if                   : 101
ifElse               : 17
main                 : 1
mainA1               : 3
module               : 82 107
moduleFunction       : 99 111
opMatrix             : 51
param                : 35 38
paramA1              : 37
print                : 104
printFunction        : 91 94
printFunction2       : 92
print_param          : 92 93
program              : 0
programA1            : 1
programFunc          : 1 7
programVars          : 1
read                 : 103
return               : 100
statement            : 3 17 20 23 26 35 36 101 102 103 104 105 106 107 108 109
term                 : 68 69 77 78
termA1               : 68 69
termFunction         : 74
updateJQ             : 17
vars                 : 11 29
varsA1               : 27
varsArray            : 27
varsComa             : 27
varsMatrix           : 33
while                : 109

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID programA1 SEMICOLON programVars programFunc main

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID programA1 SEMICOLON programVars programFunc main

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . programA1 SEMICOLON programVars programFunc main
    (2) programA1 -> .

    SEMICOLON       reduce using rule 2 (programA1 -> .)

    programA1                      shift and go to state 4

state 4

    (1) program -> PROGRAM ID programA1 . SEMICOLON programVars programFunc main

    SEMICOLON       shift and go to state 5


state 5

    (1) program -> PROGRAM ID programA1 SEMICOLON . programVars programFunc main
    (5) programVars -> . declaration
    (6) programVars -> .
    (10) declaration -> . VAR declarationPDT

    FUNCTION        reduce using rule 6 (programVars -> .)
    MAIN            reduce using rule 6 (programVars -> .)
    VAR             shift and go to state 8

    programVars                    shift and go to state 6
    declaration                    shift and go to state 7

state 6

    (1) program -> PROGRAM ID programA1 SEMICOLON programVars . programFunc main
    (7) programFunc -> . function programFunc
    (8) programFunc -> .
    (35) function -> . functionType ID functionA1 LEFTPAR param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (36) function -> . functionType ID functionA1 LEFTPAR RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (41) functionType -> . FUNCTION PDT
    (42) functionType -> . FUNCTION VOID functionTypeA1

    MAIN            reduce using rule 8 (programFunc -> .)
    FUNCTION        shift and go to state 12

    programFunc                    shift and go to state 9
    function                       shift and go to state 10
    functionType                   shift and go to state 11

state 7

    (5) programVars -> declaration .

    FUNCTION        reduce using rule 5 (programVars -> declaration .)
    MAIN            reduce using rule 5 (programVars -> declaration .)


state 8

    (10) declaration -> VAR . declarationPDT
    (11) declarationPDT -> . PDT vars SEMICOLON declarationPDT
    (12) declarationPDT -> .
    (13) PDT -> . INT
    (14) PDT -> . FLOAT
    (15) PDT -> . CHAR

    FUNCTION        reduce using rule 12 (declarationPDT -> .)
    MAIN            reduce using rule 12 (declarationPDT -> .)
    RETURN          reduce using rule 12 (declarationPDT -> .)
    IF              reduce using rule 12 (declarationPDT -> .)
    COMMENT_TEXT    reduce using rule 12 (declarationPDT -> .)
    READ            reduce using rule 12 (declarationPDT -> .)
    PRINT           reduce using rule 12 (declarationPDT -> .)
    ID              reduce using rule 12 (declarationPDT -> .)
    VAR             reduce using rule 12 (declarationPDT -> .)
    FOR             reduce using rule 12 (declarationPDT -> .)
    WHILE           reduce using rule 12 (declarationPDT -> .)
    RIGHTBRACE      reduce using rule 12 (declarationPDT -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    declarationPDT                 shift and go to state 13
    PDT                            shift and go to state 14

state 9

    (1) program -> PROGRAM ID programA1 SEMICOLON programVars programFunc . main
    (3) main -> . mainA1 MAIN LEFTPAR RIGHTPAR LEFTBRACE statement RIGHTBRACE
    (4) mainA1 -> .

    MAIN            reduce using rule 4 (mainA1 -> .)

    main                           shift and go to state 18
    mainA1                         shift and go to state 19

state 10

    (7) programFunc -> function . programFunc
    (7) programFunc -> . function programFunc
    (8) programFunc -> .
    (35) function -> . functionType ID functionA1 LEFTPAR param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (36) function -> . functionType ID functionA1 LEFTPAR RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (41) functionType -> . FUNCTION PDT
    (42) functionType -> . FUNCTION VOID functionTypeA1

    MAIN            reduce using rule 8 (programFunc -> .)
    FUNCTION        shift and go to state 12

    function                       shift and go to state 10
    programFunc                    shift and go to state 20
    functionType                   shift and go to state 11

state 11

    (35) function -> functionType . ID functionA1 LEFTPAR param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (36) function -> functionType . ID functionA1 LEFTPAR RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE

    ID              shift and go to state 21


state 12

    (41) functionType -> FUNCTION . PDT
    (42) functionType -> FUNCTION . VOID functionTypeA1
    (13) PDT -> . INT
    (14) PDT -> . FLOAT
    (15) PDT -> . CHAR

    VOID            shift and go to state 23
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    PDT                            shift and go to state 22

state 13

    (10) declaration -> VAR declarationPDT .

    FUNCTION        reduce using rule 10 (declaration -> VAR declarationPDT .)
    MAIN            reduce using rule 10 (declaration -> VAR declarationPDT .)
    RETURN          reduce using rule 10 (declaration -> VAR declarationPDT .)
    IF              reduce using rule 10 (declaration -> VAR declarationPDT .)
    COMMENT_TEXT    reduce using rule 10 (declaration -> VAR declarationPDT .)
    READ            reduce using rule 10 (declaration -> VAR declarationPDT .)
    PRINT           reduce using rule 10 (declaration -> VAR declarationPDT .)
    ID              reduce using rule 10 (declaration -> VAR declarationPDT .)
    VAR             reduce using rule 10 (declaration -> VAR declarationPDT .)
    FOR             reduce using rule 10 (declaration -> VAR declarationPDT .)
    WHILE           reduce using rule 10 (declaration -> VAR declarationPDT .)
    RIGHTBRACE      reduce using rule 10 (declaration -> VAR declarationPDT .)


state 14

    (11) declarationPDT -> PDT . vars SEMICOLON declarationPDT
    (27) vars -> . ID varsA1 varsArray varsComa

    ID              shift and go to state 25

    vars                           shift and go to state 24

state 15

    (13) PDT -> INT .

    ID              reduce using rule 13 (PDT -> INT .)


state 16

    (14) PDT -> FLOAT .

    ID              reduce using rule 14 (PDT -> FLOAT .)


state 17

    (15) PDT -> CHAR .

    ID              reduce using rule 15 (PDT -> CHAR .)


state 18

    (1) program -> PROGRAM ID programA1 SEMICOLON programVars programFunc main .

    $end            reduce using rule 1 (program -> PROGRAM ID programA1 SEMICOLON programVars programFunc main .)


state 19

    (3) main -> mainA1 . MAIN LEFTPAR RIGHTPAR LEFTBRACE statement RIGHTBRACE

    MAIN            shift and go to state 26


state 20

    (7) programFunc -> function programFunc .

    MAIN            reduce using rule 7 (programFunc -> function programFunc .)


state 21

    (35) function -> functionType ID . functionA1 LEFTPAR param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (36) function -> functionType ID . functionA1 LEFTPAR RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (49) functionA1 -> .

    LEFTPAR         reduce using rule 49 (functionA1 -> .)

    functionA1                     shift and go to state 27

state 22

    (41) functionType -> FUNCTION PDT .

    ID              reduce using rule 41 (functionType -> FUNCTION PDT .)


state 23

    (42) functionType -> FUNCTION VOID . functionTypeA1
    (73) functionTypeA1 -> .

    ID              reduce using rule 73 (functionTypeA1 -> .)

    functionTypeA1                 shift and go to state 28

state 24

    (11) declarationPDT -> PDT vars . SEMICOLON declarationPDT

    SEMICOLON       shift and go to state 29


state 25

    (27) vars -> ID . varsA1 varsArray varsComa
    (28) varsA1 -> .

    LEFTBRACK       reduce using rule 28 (varsA1 -> .)
    COMA            reduce using rule 28 (varsA1 -> .)
    SEMICOLON       reduce using rule 28 (varsA1 -> .)

    varsA1                         shift and go to state 30

state 26

    (3) main -> mainA1 MAIN . LEFTPAR RIGHTPAR LEFTBRACE statement RIGHTBRACE

    LEFTPAR         shift and go to state 31


state 27

    (35) function -> functionType ID functionA1 . LEFTPAR param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (36) function -> functionType ID functionA1 . LEFTPAR RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE

    LEFTPAR         shift and go to state 32


state 28

    (42) functionType -> FUNCTION VOID functionTypeA1 .

    ID              reduce using rule 42 (functionType -> FUNCTION VOID functionTypeA1 .)


state 29

    (11) declarationPDT -> PDT vars SEMICOLON . declarationPDT
    (11) declarationPDT -> . PDT vars SEMICOLON declarationPDT
    (12) declarationPDT -> .
    (13) PDT -> . INT
    (14) PDT -> . FLOAT
    (15) PDT -> . CHAR

    FUNCTION        reduce using rule 12 (declarationPDT -> .)
    MAIN            reduce using rule 12 (declarationPDT -> .)
    RETURN          reduce using rule 12 (declarationPDT -> .)
    IF              reduce using rule 12 (declarationPDT -> .)
    COMMENT_TEXT    reduce using rule 12 (declarationPDT -> .)
    READ            reduce using rule 12 (declarationPDT -> .)
    PRINT           reduce using rule 12 (declarationPDT -> .)
    ID              reduce using rule 12 (declarationPDT -> .)
    VAR             reduce using rule 12 (declarationPDT -> .)
    FOR             reduce using rule 12 (declarationPDT -> .)
    WHILE           reduce using rule 12 (declarationPDT -> .)
    RIGHTBRACE      reduce using rule 12 (declarationPDT -> .)
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    PDT                            shift and go to state 14
    declarationPDT                 shift and go to state 33

state 30

    (27) vars -> ID varsA1 . varsArray varsComa
    (33) varsArray -> . LEFTBRACK CST_INT RIGHTBRACK varsMatrix
    (34) varsArray -> .

    LEFTBRACK       shift and go to state 35
    COMA            reduce using rule 34 (varsArray -> .)
    SEMICOLON       reduce using rule 34 (varsArray -> .)

    varsArray                      shift and go to state 34

state 31

    (3) main -> mainA1 MAIN LEFTPAR . RIGHTPAR LEFTBRACE statement RIGHTBRACE

    RIGHTPAR        shift and go to state 36


state 32

    (35) function -> functionType ID functionA1 LEFTPAR . param RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (36) function -> functionType ID functionA1 LEFTPAR . RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE
    (37) param -> . PDT ID paramA1 functionParam
    (13) PDT -> . INT
    (14) PDT -> . FLOAT
    (15) PDT -> . CHAR

    RIGHTPAR        shift and go to state 38
    INT             shift and go to state 15
    FLOAT           shift and go to state 16
    CHAR            shift and go to state 17

    param                          shift and go to state 37
    PDT                            shift and go to state 39

state 33

    (11) declarationPDT -> PDT vars SEMICOLON declarationPDT .

    FUNCTION        reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    MAIN            reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    RETURN          reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    IF              reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    COMMENT_TEXT    reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    READ            reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    PRINT           reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    ID              reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    VAR             reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    FOR             reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    WHILE           reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)
    RIGHTBRACE      reduce using rule 11 (declarationPDT -> PDT vars SEMICOLON declarationPDT .)


state 34

    (27) vars -> ID varsA1 varsArray . varsComa
    (29) varsComa -> . COMA vars
    (30) varsComa -> .

    COMA            shift and go to state 41
    SEMICOLON       reduce using rule 30 (varsComa -> .)

    varsComa                       shift and go to state 40

state 35

    (33) varsArray -> LEFTBRACK . CST_INT RIGHTBRACK varsMatrix

    CST_INT         shift and go to state 42


state 36

    (3) main -> mainA1 MAIN LEFTPAR RIGHTPAR . LEFTBRACE statement RIGHTBRACE

    LEFTBRACE       shift and go to state 43


state 37

    (35) function -> functionType ID functionA1 LEFTPAR param . RIGHTPAR SEMICOLON LEFTBRACE statement RIGHTBRACE

    RIGHTPAR        shift and go to state 44


state 38

    (36) function -> functionType ID functionA1 LEFTPAR RIGHTPAR . SEMICOLON LEFTBRACE statement RIGHTBRACE

    SEMICOLON       shift and go to state 45


state 39

    (37) param -> PDT . ID paramA1 functionParam

    ID              shift and go to state 46


state 40

    (27) vars -> ID varsA1 varsArray varsComa .

    SEMICOLON       reduce using rule 27 (vars -> ID varsA1 varsArray varsComa .)


state 41

    (29) varsComa -> COMA . vars
    (27) vars -> . ID varsA1 varsArray varsComa

    ID              shift and go to state 25

    vars                           shift and go to state 47

state 42

    (33) varsArray -> LEFTBRACK CST_INT . RIGHTBRACK varsMatrix

    RIGHTBRACK      shift and go to state 48


state 43

    (3) main -> mainA1 MAIN LEFTPAR RIGHTPAR LEFTBRACE . statement RIGHTBRACE
    (100) statement -> . return
    (101) statement -> . if statement
    (102) statement -> . comment statement
    (103) statement -> . read statement
    (104) statement -> . print statement
    (105) statement -> . assignment statement
    (106) statement -> . declaration statement
    (107) statement -> . module statement
    (108) statement -> . for statement
    (109) statement -> . while statement
    (110) statement -> .
    (16) return -> . RETURN LEFTPAR Expression2 RIGHTPAR SEMICOLON
    (17) if -> . IF LEFTPAR Expression2 RIGHTPAR createJQif THEN LEFTBRACE statement RIGHTBRACE ifElse updateJQ
    (25) comment -> . COMMENT_TEXT
    (86) read -> . READ LEFTPAR id_list RIGHTPAR SEMICOLON
    (91) print -> . PRINT LEFTPAR printFunction RIGHTPAR SEMICOLON
    (9) assignment -> . ID EQUAL Expression2 SEMICOLON
    (10) declaration -> . VAR declarationPDT
    (99) module -> . ID LEFTPAR moduleFunction RIGHTPAR SEMICOLON
    (23) for -> . FOR forDeclaration TO Expression2 LEFTBRACE statement RIGHTBRACE
    (26) while -> . WHILE LEFTPAR Expression2 RIGHTPAR LEFTBRACE statement RIGHTBRACE

    RIGHTBRACE      reduce using rule 110 (statement -> .)
    RETURN          shift and go to state 60
    IF              shift and go to state 61
    COMMENT_TEXT    shift and go to state 62
    READ            shift and go to state 63
    PRINT           shift and go to state 64
    ID              shift and go to state 65
    VAR             shift and go to state 8
    FOR             shift and go to state 66
    WHILE           shift and go to state 67

    statement                      shift and go to state 49
    return                         shift and go to state 50
    if                             shift and go to state 51
    comment                        shift and go to state 52
    read                           shift and go to state 53
    print                          shift and go to state 54
    assignment                     shift and go to state 55
    declaration                    shift and go to state 56
    module                         shift and go to state 57
    for                            shift and go to state 58
    while                          shift and go to state 59

state 44

    (35) function -> functionType ID functionA1 LEFTPAR param RIGHTPAR . SEMICOLON LEFTBRACE statement RIGHTBRACE

    SEMICOLON       shift and go to state 68


state 45

    (36) function -> functionType ID functionA1 LEFTPAR RIGHTPAR SEMICOLON . LEFTBRACE statement RIGHTBRACE

    LEFTBRACE       shift and go to state 69


state 46

    (37) param -> PDT ID . paramA1 functionParam
    (40) paramA1 -> .

    COMA            reduce using rule 40 (paramA1 -> .)
    RIGHTPAR        reduce using rule 40 (paramA1 -> .)

    paramA1                        shift and go to state 70

state 47

    (29) varsComa -> COMA vars .

    SEMICOLON       reduce using rule 29 (varsComa -> COMA vars .)


state 48

    (33) varsArray -> LEFTBRACK CST_INT RIGHTBRACK . varsMatrix
    (31) varsMatrix -> . LEFTBRACK CST_INT RIGHTBRACK
    (32) varsMatrix -> .

    LEFTBRACK       shift and go to state 71
    COMA            reduce using rule 32 (varsMatrix -> .)
    SEMICOLON       reduce using rule 32 (varsMatrix -> .)

    varsMatrix                     shift and go to state 72

state 49

    (3) main -> mainA1 MAIN LEFTPAR RIGHTPAR LEFTBRACE statement . RIGHTBRACE

    RIGHTBRACE      shift and go to state 73


state 50

    (100) statement -> return .

    RIGHTBRACE      reduce using rule 100 (statement -> return .)


state 51

    (101) statement -> if . statement
    (100) statement -> . return
    (101) statement -> . if statement
    (102) statement -> . comment statement
    (103) statement -> . read statement
    (104) statement -> . print statement
    (105) statement -> . assignment statement
    (106) statement -> . declaration statement
    (107) statement -> . module statement
    (108) statement -> . for statement
    (109) statement -> . while statement
    (110) statement -> .
    (16) return -> . RETURN LEFTPAR Expression2 RIGHTPAR SEMICOLON
    (17) if -> . IF LEFTPAR Expression2 RIGHTPAR createJQif THEN LEFTBRACE statement RIGHTBRACE ifElse updateJQ
    (25) comment -> . COMMENT_TEXT
    (86) read -> . READ LEFTPAR id_list RIGHTPAR SEMICOLON
    (91) print -> . PRINT LEFTPAR printFunction RIGHTPAR SEMICOLON
    (9) assignment -> . ID EQUAL Expression2 SEMICOLON
    (10) declaration -> . VAR declarationPDT
    (99) module -> . ID LEFTPAR moduleFunction RIGHTPAR SEMICOLON
    (23) for -> . FOR forDeclaration TO Expression2 LEFTBRACE statement RIGHTBRACE
    (26) while -> . WHILE LEFTPAR Expression2 RIGHTPAR LEFTBRACE statement RIGHTBRACE

    RIGHTBRACE      reduce using rule 110 (statement -> .)
    RETURN          shift and go to state 60
    IF              shift and go to state 61
    COMMENT_TEXT    shift and go to state 62
    READ            shift and go to state 63
    PRINT           shift and go to state 64
    ID              shift and go to state 65
    VAR             shift and go to state 8
    FOR             shift and go to state 66
    WHILE           shift and go to state 67

    if                             shift and go to state 51
    statement                      shift and go to state 74
    return                         shift and go to state 50
    comment                        shift and go to state 52
    read                           shift and go to state 53
    print                          shift and go to state 54
    assignment                     shift and go to state 55
    declaration                    shift and go to state 56
    module                         shift and go to state 57
    for                            shift and go to state 58
    while                          shift and go to state 59

state 52

    (102) statement -> comment . statement
    (100) statement -> . return
    (101) statement -> . if statement
    (102) statement -> . comment statement
    (103) statement -> . read statement
    (104) statement -> . print statement
    (105) statement -> . assignment statement
    (106) statement -> . declaration statement
    (107) statement -> . module statement
    (108) statement -> . for statement
    (109) statement -> . while statement
    (110) statement -> .
    (16) return -> . RETURN LEFTPAR Expression2 RIGHTPAR SEMICOLON
    (17) if -> . IF LEFTPAR Expression2 RIGHTPAR createJQif THEN LEFTBRACE statement RIGHTBRACE ifElse updateJQ
    (25) comment -> . COMMENT_TEXT
    (86) read -> . READ LEFTPAR id_list RIGHTPAR SEMICOLON
    (91) print -> . PRINT LEFTPAR printFunction RIGHTPAR SEMICOLON
    (9) assignment -> . ID EQUAL Expression2 SEMICOLON
    (10) declaration -> . VAR declarationPDT
    (99) module -> . ID LEFTPAR moduleFunction RIGHTPAR SEMICOLON
    (23) for -> . FOR forDeclaration TO Expression2 LEFTBRACE statement RIGHTBRACE
    (26) while -> . WHILE LEFTPAR Expression2 RIGHTPAR LEFTBRACE statement RIGHTBRACE

    RIGHTBRACE      reduce using rule 110 (statement -> .)
    RETURN          shift and go to state 60
    IF              shift and go to state 61
    COMMENT_TEXT    shift and go to state 62
    READ            shift and go to state 63
    PRINT           shift and go to state 64
    ID              shift and go to state 65
    VAR             shift and go to state 8
    FOR             shift and go to state 66
    WHILE           shift and go to state 67

    comment                        shift and go to state 52
    statement                      shift and go to state 75
    return                         shift and go to state 50
    if                             shift and go to state 51
    read                           shift and go to state 53
    print                          shift and go to state 54
    assignment                     shift and go to state 55
    declaration                    shift and go to state 56
    module                         shift and go to state 57
    for                            shift and go to state 58
    while                          shift and go to state 59

state 53

    (103) statement -> read . statement
    (100) statement -> . return
    (101) statement -> . if statement
    (102) statement -> . comment statement
    (103) statement -> . read statement
    (104) statement -> . print statement
    (105) statement -> . assignment statement
    (106) statement -> . declaration statement
    (107) statement -> . module statement
    (108) statement -> . for statement
    (109) statement -> . while statement
    (110) statement -> .
    (16) return -> . RETURN LEFTPAR Expression2 RIGHTPAR SEMICOLON
    (17) if -> . IF LEFTPAR Expression2 RIGHTPAR createJQif THEN LEFTBRACE statement RIGHTBRACE ifElse updateJQ
    (25) comment -> . COMMENT_TEXT
    (86) read -> . READ LEFTPAR id_list RIGHTPAR SEMICOLON
    (91) print -> . PRINT LEFTPAR printFunction RIGHTPAR SEMICOLON
    (9) assignment -> . ID EQUAL Expression2 SEMICOLON
    (10) declaration -> . VAR declarationPDT
    (99) module -> . ID LEFTPAR moduleFunction RIGHTPAR SEMICOLON
    (23) for -> . FOR forDeclaration TO Expression2 LEFTBRACE statement RIGHTBRACE
    (26) while -> . WHILE LEFTPAR Expression2 RIGHTPAR LEFTBRACE statement RIGHTBRACE

    RIGHTBRACE      reduce using rule 110 (statement -> .)
    RETURN          shift and go to state 60
    IF              shift and go to state 61
    COMMENT_TEXT    shift and go to state 62
    READ            shift and go to state 63
    PRINT           shift and go to state 64
    ID              shift and go to state 65
    VAR             shift and go to state 8
    FOR             shift and go to state 66
    WHILE           shift and go to state 67

    read                           shift and go to state 53
    statement                      shift and go to state 76
    return                         shift and go to state 50
    if                             shift and go to state 51
    comment                        shift and go to state 52
    print                          shift and go to state 54
    assignment                     shift and go to state 55
    declaration                    shift and go to state 56
    module                         shift and go to state 57
    for                            shift and go to state 58
    while                          shift and go to state 59

state 54
